this is the 1 change

--- a/aceGame/classic.html
+++ b/aceGame/classic.html
@@ -23,7 +23,7 @@
       <div class="logo">
         <a href="index.html">
         
-         <img src="images/aceLogo.png" alt="">
+         <img src="images/aceLogo.png" height="0px" alt="">
         </a>
       </div>
       <div></div>
@@ -37,18 +37,35 @@
       <div></div>
       <div></div>
       <div></div>
-      <div></div>
-      <div></div>
-      <div>
-        <a href="oneclassic.html">
-          <img src="images/oneHour.png" alt="">
-        </a>
-      </div>
       <div>
         <a href="twoclassic.html">
           <img src="images/twoHour.png" alt="">
         </a>
       </div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div>
+
+  
+      </div>
+      <div>
+
+        <a href="oneclassic.html">
+          <img src="images/oneHour.png" alt="">
+        </a>
+      </div>
+      <div></div>
+      <div></div>
+      <div class="logo">
+        <a href="index.html">
+        
+         <img src="images/aceLogo.png" alt="">
+        </a>
+      </div>
+      <div></div>
       <div></div>
       <div></div>
       <div></div>
