--- a/aceGame/twoclassic.html
+++ b/aceGame/twoclassic.html
@@ -50,7 +50,7 @@
         <div>
         <a href="index.html">
         
-          <img src="images/aceLogo.png" margin-right: 100px;  alt="" height="200px" width="">
+          <img src="images/aceLogo.png" margin-right: 100px;  alt="" height="200px" width="500px">
          </a>
          </div>
          <div></div>
