more buttering up

--- a/aceGame/twoballoon.html
+++ b/aceGame/twoballoon.html
@@ -49,7 +49,7 @@
         <div>
         <a href="index.html">
         
-          <img src="images/aceLogo.png" margin-top: 3000px;  alt="" height="140px" width="140px">
+          <img src="images/aceLogo.png" margin-top: 3000px;  alt="" height="170px" >
          </a>
          </div>
          <div></div>
