Added bugs and zombie targets and pages

--- a/aceGame/index.html
+++ b/aceGame/index.html
@@ -35,11 +35,14 @@
       <div></div>
       <div></div>
       <div>
-        <img src="images/zombieGame.png"/>
+        <a href="zombie.html">
+          <img src="images/zombieGame.png"/>
+        </a>
       </div>
       <div>
-
-        <img src="images/bugsBunny.png"/>
+        <a href="bugs.html">
+          <img src="images/bugsBunny.png"/>
+        </a>
       </div>
       <div></div>
       <div>
